# StarFetch_Core

./: LICENSE  README.cn.md  README.md
.github/: RELEASE_SETUP.md
.github/workflows/: Release.yml  WinGet-First-Submission.yml  brew_update.yml  winget-init.yml  winget-publish.yml
StarFetch/: Cargo.toml
StarFetch/src/: art.rs  hyperlink.rs  lib.rs  main.rs  system.rs
winget/: README.md
winget/manifests/l/Linus-Shyu/StarFetch/0.2.3/: Linus-Shyu.StarFetch.installer.yaml
