[package]
name = "starfetch"
version = "0.2.2"
edition = "2021"
description = "A fast and stylish system information fetch tool."
authors = ["Linus Shyu <0x11@linusshyu.dev>"]
license = "MIT"

[dependencies]
ansi_term = "0.12"
sysinfo = "0.38.0"
systemstat = "0.2"
terminal_size = "0.4.3"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.deb]
maintainer = "Linus Shyu <0x11@linusshyu.dev>"
section = "utils"
priority = "optional"
extended-description = """
StarFetch is a high-performance system information tool written in Rust.
Part of the Star Lake AI ecosystem, designed for speed and aesthetic.
"""

assets = [
    ["target/x86_64-unknown-linux-gnu/release/starfetch", "/usr/bin/starfetch", "755"],
]

depends = "$auto"
